# rtpipeline

./: .auto-claude-status  .condarc  .dockerignore  .gitignore  Agents.md  CITATION.cff  CLAUDE.md  CLINICAL_RADIOMICS_GUIDE.md  COLAB_NOTEBOOK_TEST_REPORT.md  COMPATIBILITY_FIXED.md  COMPREHENSIVE_DEBUG_REPORT.md  CUSTOM_MODELS_ISSUES.md  CUSTOM_STRUCTURES_ISSUES.md  CUSTOM_STRUCTURES_README.md  DEEP_DEBUG_REPORT.md  DOCKER_COMPATIBILITY.md  Dockerfile  Dockerfile.reviewer_minimal  GETTING_STARTED.md  HANG_PREVENTION.md  IDEAS.md  IMPROVEMENTS_SUMMARY.md  LICENSE  MANIFEST.in  MISSING_STRUCTURES_BEHAVIOR.md  PARALLELISM_ANALYSIS_INDEX.md  PARALLELISM_COMPREHENSIVE_ANALYSIS.md  PARALLELISM_FIX.md  PARALLELISM_QUICKSTART.md  PARALLELIZATION_AUDIT_FOLLOWUP.md  PARALLELIZATION_CHANGES_SUMMARY.md  PARALLELIZATION_FIX_PLAN.md  PARALLELIZATION_PARAMETERS.md  PARALLELIZATION_QUICK_REFERENCE.md  PARALLEL_RADIOMICS.md  PELVIC_STRUCTURES_README.md  PERFORMANCE_OPTIMIZATION.md  PIPELINE_DEFAULTS.md  PROBLEMS.md  PR_BODY.md  (+52 more)
.github/workflows/: deploy-docs.yml  docker.yml
Code/: 00 Convert to py.ipynb  00 Convert to py.py  01 Get CT details.ipynb  01 Get CT details.py  02 Get RT details.ipynb  02 Get RT details.py  03 Prepare metadata.ipynb  03 Prepare metadata.py  04 Organize part 1.ipynb  04 Organize part 1.py  04 Organize.ipynb  04 Organize.py  05 TotalSegmentator.ipynb  05 TotalSegmentator.py  05b Boolean operations.ipynb  06 DHV (all).ipynb  06 DHV (all).py  06 DVH (single test).ipynb  06 DVH (single test).py  07 DVH Visualize.ipynb  07 DVH Visualize.py  08 Extract labs.ipynb  08 Extract labs.py  dvh_test.py
Knowledge/: CT Acquisition Parameters for Radiomic Analysis_ A Comprehensive Guide.md  DICOM-RT Tags for Radiotherapy Data.md  PyRadiomics CT Configuration Research.md  PyRadiomics MR Image Configuration.md  Pyradiomics PET Configuration Research.md
Manuscript/Plan/: FIGURES_PLAN.md  MANUSCRIPT_PLAN.md  STATISTICAL_ANALYSIS_PLAN.md  TABLES_PLAN.md
archive/: MIGRATION_LOG_2026-05-02.md
custom_models/: README.md  download_weights.sh  download_weights_example.sh
custom_models/HN_lymph_nodes/: custom_model.yaml
custom_models/_disabled_lung_tumor_aimi_nsclc_rg/: README.md  custom_model.yaml
custom_models/cardiac_STOPSTORM/: custom_model.yaml  script.py
custom_models/lung_tumor_aimi_nsclc_rg/: README.md
custom_models/lung_tumor_medsam_boxprompt/: README.md  custom_model.yaml
custom_models/lung_tumor_medsam_boxprompt_rider/: custom_model.yaml
custom_models/lung_tumor_pancancer_lung/: README.md  custom_model.yaml
custom_models/lung_tumor_pancancer_lung_rider/: custom_model.yaml
custom_models/lung_tumor_totalseg_lung_nodules/: README.md  custom_model.yaml
custom_models/lung_tumor_totalseg_lung_nodules_rider/: custom_model.yaml
docker_run/conda_cache/: environments.txt
docker_run/docker_config/: .token_seed
docker_run_old/docker_config/: .token_seed
docker_run_old/logs/: .nfs0000000001840ebd00000094
docs/: CODE_REVIEW.md  CONTAINER_TESTING.md  DOCKER.md  DOCKER_SETUP_GUIDE.md  Guide to Results Interpretation.md  PARALLELIZATION.md  PIPELINE_ARCHITECTURE.md  RADIOMICS_ROBUSTNESS.md  README.md  RESULTS.md  SYSTEMATIC_CT_CROPPING.md  _config.yml  architecture.html  cli.md  configuration.html  custom-models.html  custom_models.md  docker.html  dvh.md  faq.html  features.html  getting-started.html  index.html  index.md  knowledge.html  metadata.md  nginx-rtpipeline.conf  output-format.html  pipeline.md  pipeline_architecture.md  pipeline_report.md  qc_cropping_audit.md  quickstart.md  radiomics-robustness.html  release_notes.md  segmentation.md  viewers.md
docs/case_studies/: index.md
docs/developer/: container_testing.md
docs/features/: custom_models.md  distributed_analysis.md  dose_classification.md  qc_cropping.md  radiomics_robustness.md
docs/getting_started/: docker_setup.md  index.md  local_installation.md  webui.md
envs/: rtpipeline-custom-models.yaml  rtpipeline-local.yaml  rtpipeline-radiomics-local.yaml  rtpipeline-radiomics.yaml  rtpipeline.yaml
internal/: Agents.md  IMPROVEMENTS.md  OPTIMIZATION_SUMMARY.md  PROBLEMS.md
rtpipeline/: __init__.py  anatomical_cropping.py  auto_rtstruct.py  cli.py  config.py  ct.py  custom_models.py  custom_structures.py  custom_structures_rtstruct.py  dicom_copy.py  dicom_seg.py  dvh.py  federation.py  inventory.py  layout.py  meta.py  metadata.py  modality_classifier.py  numpy2_compat.py  numpy_compat.py  numpy_legacy_compat.py  organize.py  pet_suv.py  pyradiomics_compat.py  quality_control.py  radiomics.py  radiomics_conda.py  radiomics_parallel.py  radiomics_params.yaml  radiomics_params_ibsi.yaml  radiomics_params_mr.yaml  radiomics_params_pet_fdg.yaml  radiomics_params_pet_psma.yaml  radiomics_robustness.py  roi_fixer.py  rt_details.py  segmentation.py  structure_merger.py  tcia_acquisition.py  totalsegmentator_compat.py  (+2 more)
scripts/: anonymize_pipeline_results.py  check_public_boundary.py  deploy_docker.sh  install_local.sh  run_aggregate_robustness.py  run_local.sh  run_radiomics.py  run_radiomics_robustness.py  test_hooks.sh
tests/: test_all_series_scope.py  test_cli_smoke.py  test_copy_instances_hardlink.py  test_custom_lung_models.py  test_custom_models_r8.py  test_custom_structures_missing_source.py  test_custom_structures_rtstruct_roi_numbering.py  test_dicom_seg.py  test_docker_smoke.py  test_dvh_dose_resolution.py  test_federation.py  test_hygiene_batch_a.py  test_lowconf_fixes.py  test_materialize_scope.py  test_modality_classifier.py  test_parallel_discovery_equivalence.py  test_percourse_ct_selection.py  test_pet_suv.py  test_radiomics_conda_resilience.py  test_radiomics_mp_context.py  test_radiomics_param_activation.py  test_radiomics_robustness_icc.py  test_radiomics_scalar_values.py  test_release_integrity.py  test_reliability_batch_b.py  test_science_batch_c.py  test_scoped_discovery.py  test_segment_all_series.py  test_segmentation_completeness.py  test_ts_version_sidecar.py
webui/: .gitignore  README.md  __init__.py  app.py  dicom_validator.py  job_manager.py  requirements.txt
(+125 files in other folders)
