[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rtpipeline"
version = "2.2.0"
description = "Open-source framework for standardized radiotherapy analytics with robustness-aware radiomics"
authors = [{ name = "Konrad Stawiski", email = "konrad@konsta.com.pl" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydicom>=3.0,<4",
  "dicompyler-core==0.5.6",
  # NumPy 2.x is used by the primary segmentation/runtime environment.
  # The radiomics stack remains isolated in envs/rtpipeline-radiomics.yaml.
  "numpy>=1.23",
  "pandas",
  "scipy",
  "SimpleITK",
  "matplotlib",
  "openpyxl",
  "TotalSegmentator==2.12.0",  # Pinned for reproducible segmentation behavior
  "xgboost",  # Required for totalseg_get_phase and totalseg_get_modality
  "dicom2nifti>=2.4",
  "nested-lookup",
  "rt-utils",
  "plotly",
  "nbformat",     # For notebook processing support
  "ipython",      # For notebook processing support
  "filelock",     # For thread-safe file operations in parallel processing
]

[project.optional-dependencies]
dcmseg = [
  # Optional because pydicom-seg currently requires NumPy <2.0, while the
  # main RTpipeline runtime intentionally supports NumPy 2.x.
  "pydicom-seg==0.4.1",
  "numpy<2.0",
]
radiomics = [
  "pyradiomics",  # Optional - may have compatibility issues with Python 3.12+
  "pingouin>=0.5.3",  # For ICC computation in robustness analysis
]
docs = [
  "mkdocs-material",
]

[project.scripts]
rtpipeline = "rtpipeline.cli:main"

[tool.setuptools]
packages = ["rtpipeline", "rtpipeline.ext"]
include-package-data = true

[tool.setuptools.package-data]
rtpipeline = [
  "ext/*.zip",
  "radiomics_params.yaml",
  "radiomics_params_mr.yaml",
  "radiomics_params_pet_fdg.yaml",
  "radiomics_params_pet_psma.yaml",
  "custom_structures_pelvic.yaml",
]
