[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rtpipeline"
version = "2.2.3"
description = "Open-source framework for standardized radiotherapy analytics with robustness-aware radiomics"
authors = [{ name = "Konrad Stawiski", email = "konrad@konsta.com.pl" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
  "pydicom>=3.0.2,<4",
  "dicompyler-core==0.5.6",
  # NumPy 2.x is used by the primary segmentation/runtime environment.
  # The radiomics stack remains isolated in envs/rtpipeline-radiomics.yaml.
  # Package code is installed --no-deps into the isolated NumPy 1.26 helper;
  # supported main environments still pin NumPy 2.x in envs/*rtpipeline*.yaml.
  "numpy>=1.23,<3",
  "pandas",
  "pyarrow",
  "scipy",
  "SimpleITK",
  "matplotlib",
  "openpyxl",
  "TotalSegmentator==2.12.0",  # Pinned for reproducible segmentation behavior
  "xgboost",  # Required for totalseg_get_phase and totalseg_get_modality
  "dicom2nifti>=2.4",
  "nested-lookup",
  "rt-utils",
  "plotly",
  "nbformat",     # For notebook processing support
  "ipython",      # For notebook processing support
  "filelock>=3.20.3",  # For thread-safe file operations in parallel processing
  "pingouin>=0.5.3",  # ICC computation; PyRadiomics itself stays isolated
]

[project.optional-dependencies]
docs = [
  "mkdocs-material",
]

[project.scripts]
rtpipeline = "rtpipeline.cli:main"

[project.urls]
Homepage = "https://github.com/kstawiski/rtpipeline"
Documentation = "https://kstawiski.github.io/rtpipeline/"
Repository = "https://github.com/kstawiski/rtpipeline"
Issues = "https://github.com/kstawiski/rtpipeline/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["rtpipeline*"]

[tool.setuptools.package-data]
rtpipeline = [
  "ext/*.zip",
  "radiomics_params.yaml",
  "radiomics_params_mr.yaml",
  "radiomics_params_pet_fdg.yaml",
  "radiomics_params_pet_psma.yaml",
  "custom_structures_pelvic.yaml",
]

[tool.ruff]
target-version = "py310"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82", "PLE"]

[tool.ruff.lint.per-file-ignores]
"scripts/run_*.py" = ["F821"]  # Snakemake injects the global at runtime.
"workflow/scripts/*.py" = ["F821"]  # Snakemake injects the global at runtime.
